--- a/css_styling/wellness_packages.html
+++ b/css_styling/wellness_packages.html
@@ -45,13 +45,13 @@
             <!--This is the section for the packages-->
                 <section class="Nut-pack">
                     <!-- Nutritional package section -->
-                        <h2 id="nutrition">NUTRITION PACKAGES</h2>
+                        <h2 id="nutrition">NUTRITION PACKAGES</h2><br><br>
                         <div class="container1">
                             <p>
                                 Our nutrition packages are tailored to help you make informed food choices, manage your weight effectively, and develop a positive relationship with food.<br> Whether you're looking for personalized meal plans, expert consultations, or workshops on mindful eating, we have the right package to meet your needs.
                                 Following this is our selection of packages
                             </p>
-                            </div>               
+                            </div><br><br><br>             
                             <section class="npack1">
                                 <div class="container2">
                                     <div class="img-section">
@@ -61,7 +61,7 @@
                                         <h3>Healthy Eating Starter Kit</h3>
                                 <p>Description: This package is designed for employees who want to kickstart their journey towards a healthier diet. It includes personalized meal plans, nutrition consultations, and a variety of resources to help employees make informed food choices.
                                 Duration: 1 month </p>
-                                <a href="" class="button" >Choose Package</a>
+                                <a href="" class="button" >Choose Package</a><br><br><br> 
                                     </div>
                                 </div>
                             </section>
@@ -75,7 +75,7 @@
                             <p>Description: This package is ideal for employees looking to manage their weight effectively. It offers customized meal plans, regular check-ins with a nutritionist, and access to a weight management app for tracking progress.
                             Duration: 3 months</p>
                             <div>
-                                <a href="" class="button" >Choose Package</a>
+                                <a href="" class="button" >Choose Package</a><br><br><br> 
                             </div>
                         </div>
                         </div>
@@ -90,7 +90,7 @@
                             Description: This package focuses on promoting mindful eating habits among employees. It includes interactive workshops, mindfulness exercises, and guidance on creating a positive relationship with food.
                             Duration: Half-day workshop
                             <div>
-                                <a href="" class="button" >Choose Package</a>
+                                <a href="" class="button" >Choose Package</a><br><br><br> 
                             </div>
                             </div>
                         </div>
@@ -114,10 +114,12 @@
                                     </div>
                                     <div class="content-section">
                                         <h3>Group Exercise Classes</h3>
-                                        p>
-                                    
-                                    </p>
-                                <a href="" class="button" >Choose Package</a>
+                                        <p>
+                                            Group exercise suits people of all ages and fitness levels.
+                                            Regular group exercise improves your fitness, heart health and weight loss.
+                                            Exercising with others boosts your mental health and creates community connections.
+                                        </p>
+                                <a href="" class="button" >Choose Package</a><br><br><br> 
                                     </div>
                                 </div>
                             </section>
@@ -131,7 +133,7 @@
                             <p>Description: This package provides one-on-one sessions with a personal trainer to help employees achieve their fitness goals. The program includes personalized workout plans, regular progress assessments, and nutritional guidance.
                             Duration: 12 weeks</p>
                             <div>
-                                <a href="" class="button" >Choose Package</a>
+                                <a href="" class="button" >Choose Package</a><br><br><br> 
                             </div>
                         </div>
                         </div>
@@ -146,7 +148,7 @@
                             <p>Description: This package offers a rejuvenating wellness retreat experience for employees. It includes a weekend getaway at a peaceful location, outdoor activities like hiking and yoga, healthy meals, and workshops on stress management and self-care.
                             Duration: 2-day retreat</p>
                             <div>
-                                <a href="" class="button" >Choose Package</a>
+                                <a href="" class="button" >Choose Package</a><br><br><br> 
                             </div>
                         </div>
                     </div>
