--- a/css_styling/Home.html
+++ b/css_styling/Home.html
@@ -35,7 +35,7 @@
                     <li><a href="./Home.html">HOME</a></li>
                     <li><a href="./wellness_packages.html">WELLNESS PACKAGES</a></li>
                     <li><a href="./about.html">ABOUT US</a></li>
-                    <li><a href="./about.html">AVAILABLE PACKAGES</a></li>
+                    <li><a href="./avail.html">AVAILABLE PACKAGES</a></li>
                 </ul>
             </nav>
         </div>
@@ -111,6 +111,7 @@
             </div>
         </section>
 
+<!--Here comes Mister foot-->
     <footer>
         <div class="container-footer">
             <div>
