--- a/css_styling/wellness_packages.html
+++ b/css_styling/wellness_packages.html
@@ -16,7 +16,7 @@
     <body>
 <!--This is the Banner section of the landing page-->
 <section id="banner2">
-    <a href=""><img src="/media/images_and_Videos/logo.png" class="logo"></a>
+    <a href="./Home.html"><img src="./media/images_and_Videos/logo.png" class="logo"></a>
     <div class="banner-text">
         <h1>WELLNESS PACKAGES</h1>
         <div class="banner-btn">
@@ -30,15 +30,15 @@
 <div id="sideNav">
     <nav>
         <ul>
-            <li><a href="/Home.html">HOME</a></li>
+            <li><a href="Home.html">HOME</a></li>
             <li><a href="wellness_packages.html">WELLNESS PACKAGES</a></li>
-            <li><a href="#Wwo">ABOUT US</a></li>
-            <li><a href="#testimonials">AVAIL PACKAGES</a></li>
+            <li><a href="about.html">ABOUT US</a></li>
+            <li><a href="avail.html">AVAIL PACKAGES</a></li>
         </ul>
     </nav>
 </div>
 <div id="menuBtn">
-    <img src="/media/images_and_Videos/menu.png" id="menu">
+    <img src="./media/images_and_Videos/menu.png" id="menu">
 </div>
     <main>
             <!--This is the section for the packages-->
@@ -54,27 +54,27 @@
                             <section class="npack1">
                                 <div class="container2">
                                     <div class="img-section">
-                                        <img src="/media/images_and_Videos/Nutrition.jpg" alt="Nutrition">
+                                        <img src="./media/images_and_Videos/Nutrition.jpg" alt="Nutrition">
                                     </div>
                                     <div class="content-section">
                                         <h3>Healthy Eating Starter Kit</h3>
                                 <p>Description: This package is designed for employees who want to kickstart their journey towards a healthier diet. It includes personalized meal plans, nutrition consultations, and a variety of resources to help employees make informed food choices.
                                 Duration: 1 month </p>
-                                <a href="" class="button" >Choose Package</a><br><br><br> 
+                                <a href="./avail.html" class="button" >Choose Package</a><br><br><br> 
                                     </div>
                                 </div>
                             </section>
                             <section class="npack2">
                         <div class="container3">
                             <div class="img-section">
-                                <img src="/media/images_and_Videos/Nut2.jpg" alt="Nutrition">
+                                <img src="./media/images_and_Videos/Nut2.jpg" alt="Nutrition">
                             </div>
                             <div class="content-section">
                             <h3>Weight Management Program</h3>
                             <p>Description: This package is ideal for employees looking to manage their weight effectively. It offers customized meal plans, regular check-ins with a nutritionist, and access to a weight management app for tracking progress.
                             Duration: 3 months</p>
                             <div>
-                                <a href="" class="button" >Choose Package</a><br><br><br> 
+                                <a href="./avail.html" class="button">Choose Package</a><br><br><br> 
                             </div>
                         </div>
                         </div>
@@ -82,19 +82,18 @@
                         <section class="npack3">
                             <div class="container4">
                             <div class="img-section">
-                                <img src="/media/images_and_Videos/Nut3.jpg" alt="Nutrition">
+                                <img src="./media/images_and_Videos/Nut3.jpg" alt="Nutrition">
                             </div>
                         <div class="content-section">
                             <h3>Mindful Eating Workshop</h3>
                             Description: This package focuses on promoting mindful eating habits among employees. It includes interactive workshops, mindfulness exercises, and guidance on creating a positive relationship with food.
                             Duration: Half-day workshop
                             <div>
-                                <a href="" class="button" >Choose Package</a><br><br><br> 
+                                <a href="./avail.html" class="button">Choose Package</a><br><br><br> 
                             </div>
                             </div>
                         </div>
                     </section>
-                    
                 </section>
                 <section class="Fit-pack">
                     <div class="Fitness_Plans">
@@ -109,7 +108,7 @@
                                 <div class="container2">
 
                                     <div class="img-section">
-                                        <img src="/media/images_and_Videos/fit1.jpg" alt="Nutrition">
+                                        <img src="./media/images_and_Videos/fit1.jpg" alt="Nutrition">
                                     </div>
                                     <div class="content-section">
                                         <h3>Group Exercise Classes</h3>
@@ -118,21 +117,21 @@
                                             Regular group exercise improves your fitness, heart health and weight loss.
                                             Exercising with others boosts your mental health and creates community connections.
                                         </p>
-                                <a href="" class="button" >Choose Package</a><br><br><br> 
+                                <a href="./avail.html" class="button" >Choose Package</a><br><br><br> 
                                     </div>
                                 </div>
                             </section>
                             <section class="fpack2">
                                 <div class="container3">
                             <div class="img-section">
-                                <img src="/media/images_and_Videos/fit2.jpg" alt="Nutrition">
+                                <img src="./media/images_and_Videos/fit2.jpg" alt="Nutrition">
                             </div>
                             <div class="content-section">
                             <h3> Personal Training Program</h3>
                             <p>Description: This package provides one-on-one sessions with a personal trainer to help employees achieve their fitness goals. The program includes personalized workout plans, regular progress assessments, and nutritional guidance.
                             Duration: 12 weeks</p>
                             <div>
-                                <a href="" class="button" >Choose Package</a><br><br><br> 
+                                <a href="./avail.html" class="button" >Choose Package</a><br><br><br> 
                             </div>
                         </div>
                         </div>
@@ -140,20 +139,63 @@
                         <section class="fpack3">
                             <div class="container3">
                             <div class="img-section">
-                                <img src="/media/images_and_Videos/fit3.jpg" alt="Nutrition">
+                                <img src="./media/images_and_Videos/fit3.jpg" alt="Nutrition">
                             </div>
                         <div class="content-section">
                             <h3>Wellness Retreat:</h3>
                             <p>Description: This package offers a rejuvenating wellness retreat experience for employees. It includes a weekend getaway at a peaceful location, outdoor activities like hiking and yoga, healthy meals, and workshops on stress management and self-care.
                             Duration: 2-day retreat</p>
                             <div>
-                                <a href="" class="button" >Choose Package</a><br><br><br> 
+                                <a href="./avail.html" class="button" >Choose Package</a><br><br><br> 
                             </div>
                         </div>
                     </div>
                     </section>
                     
                 </section>
+                <footer>
+                    <div class="container-footer">
+                        <div>
+                            <h2>Check Out</h2>
+                            <ul>
+                                <li><a href="./about.html">About Us</a></li>
+                                <li><a href="./Home.html.container-who" target="_blank">Branches of Welfit</a></li>
+                                <li><a href="https://www.youtube.com/watch?v=fcN37TxBE_s" target="_blank">Press & Blog</a></li>
+                                <li><a href="https://www.okoessentials.com.sg/pages/privacy-policy?gclid=CjwKCAjw4ZWkBhA4EiwAVJXwqRyWrSG-9Ze-NXEgv8NEtsKe1xXL_Oy4RK9V8UgCa1JAvmlg8wFJYxoC0nsQAvD_BwE" target="_blank">Privacy Policy</a></li>
+                            </ul>
+                        </div>
+                        <div>
+                            <h2>Quick Links</h2>
+                            <ul>
+                                <li><a href="./Home.html">Back to Home</a></li>
+                                <li><a href="./wellness_packages.html">Wellness packages</a></li>
+                                <li><a href="./about.html">About Welfit</a></li>
+                                <li><a href="./avail.html">Our packages</a></li>
+                                <li><a href="./Home.html">Feedbacks</a></li>
+                            </ul>
+                        </div>
+                        <div>
+                            <h2>Newsletter</h2>
+                            <form>
+                                <input type="text" placeholder="Enter your text" />
+                                <button>Search</button>
+                            </form>
+                            <!-- <p class="footer-copyright">© Isaiah Essien 2023- i.essien@alustudent.com</p> -->
+                        </div>
+                        <div class="social-links">
+                            <h2>Check our Socials</h2>
+                            <i class="fa fa-facebook"></i>
+                            <i class="fa fa-twitter"></i>
+                            <i class="fa fa-instagram"></i>
+                            <i class="fa fa-linkedin"></i>
+                            <i class="fa fa-snapchat"></i>
+                            <i class="fa fa-youtube-play"></i>
+                        </div>
+                    </div>
+                    <!-- <div class="footer-copyright">
+                        <p>© html/css-contest G4- Original Tech Broes 2023</p>
+                    </div> -->
+                </footer>
 
 
         <!--A little script for the menu and side nav. Nothing too serious-->
@@ -180,7 +222,5 @@ var scroll = new SmoothScroll('a[href*="#"]', {
     speedAsDuration: true
 });
 </script>
-<footer>
-    </footer>
 </body>
 </html>
